# openpull

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
crawl4ai_scraper/: __init__.py  scraper.py
examples/: basic_usage.py  team_extraction.py
openpull/: scraper.py
tests/: test_scraper.py
